# VantageCV

./: .gitignore  ARCHITECTURE.md  CENTERLINE_ENFORCEMENT.md  CONTRIBUTING.md  LICENSE  LIGHTING_POLICY.md  LOCATION_SPAWNING.md  QUICKSTART.md  RANDOMIZATION_AUDIT.md  README.md  SETUP_UE5.md  SIMPLE_ASSET_SETUP.md  find_datacapture_actor.py  output.txt  proof_of_concept_capture.py  pyproject.toml  requirements.txt  temp_check_anchors.py  temp_check_lanes.py  temp_get_scales.py  test_remote.py
configs/: automotive.yaml  industrial.yaml  research.yaml  research_v2.yaml  vehicles.yaml
configs/levels/: automobileV2.yaml  automobileV2_anchors.yaml  automobileV2_anchors_detected.yaml  automobileV2_vehicles.yaml
configs/zones/: SCHEMA.yaml  automobile.zones.yaml
cpp/: CMakeLists.txt
cpp/inference/: cuda_kernels.cu  tensorrt_engine.cpp  tensorrt_engine.h
data/: .gitkeep
data/synthetic/: .gitkeep
docs/: ue5_scene_setup_guide.md
docs/images/: .gitkeep  README.md
domains/: __init__.py  automotive.py  base.py  industrial.py
models/checkpoints/: .gitkeep
notebooks/: 01_quick_start.ipynb
scripts/: adjust_exposure.py  apply_vehicle_scales.py  capture.py  capture_props.py  capture_zones.py  check_all_boundaries.py  check_buses.py  check_positions.py  check_ppv_exposure.py  check_prop_locations.py  check_runtime_settings.py  check_skylight.py  check_viewport_exposure.py  copy_ppv_to_datacapture.py  debug_boundaries.py  debug_bus_cubes.py  debug_collision.py  debug_location_3.py  debug_move_anchor.py  debug_visibility.py  deep_search_bus.py  detect_lighting.py  diagnose_exposure_mismatch.py  diagnose_settings.py  diagnose_spawn_positions.py  disable_auto_exposure.py  discover_level.py  discover_vehicles.py  download_coco.py  export.py  filter_coco_vehicles.py  find_buses.py  fix_bright_captures.py  fix_exposure.py  fix_postprocess_settings.py  force_lighting_brightness.py  force_max_brightness.py  full_diagnostic.py  generate.py  generate_research.py  (+31 more)
tests/: test_pipeline.py
ue5_plugin/: README.md  SCENE_SETUP_GUIDE.md  VantageCV.uplugin
vantagecv/: __init__.py  annotator.py  config.py  generator.py  randomization.py  ue5_bridge.py  utils.py  validation.py
(+57 files in other folders)
