[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantagecv"
version = "0.1.0"
description = "Synthetic data generation for computer vision using Unreal Engine 5"
authors = [{name = "Evan Petersen"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "mlflow>=2.8.0",
    "onnx>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
packages = ["vantagecv", "domains"]
